tests/integration/error/named_struct_missing_field.alo
// expect-error: Missing initializer for field 'y' in struct 'Point'

struct Point {
  x: int,
  y: int
}

fun main() -> void {
  imut p: Point = Point {
    x: 10
  };
}
